# chat-fastapi

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/application/api/: main.py
app/application/api/messages/: handlers.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py
app/domain/exceptions/: base.py  message.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongodb.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py
app/settings/: config.py
app/tests/: fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  storages.yaml
